fixed some of the overflow and width bug

--- a/css/styleBody.css
+++ b/css/styleBody.css
@@ -1,25 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Pangolin&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Pangolin&display=swap");
 
 /* boxsizing reset */
 
 html {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-  }
-  *, *:before, *:after {
-    -webkit-box-sizing: inherit;
-    -moz-box-sizing: inherit;
-    box-sizing: inherit;
-    }
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
 
 body {
-    font-family: 'Pangolin', cursive;
-    font-size: 2rem;
-    text-align: center;
-    width:100%;
-    height: 100%;
-    background-color: #C1CDC5;
+  font-family: "Pangolin", cursive;
+  font-size: 2rem;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  background-color: #c1cdc5;
+  overflow: hidden;
 }
 
 main {
